--- a/index.html
+++ b/index.html
@@ -417,6 +417,42 @@
   </header>
 
 
+  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;">
+    <p>
+        <strong>Provercel</strong> to nowoczesne rozwiązania z zakresu <em>barier ochronnych i przemysłowych</em> 
+            projektowane w technologii 3D. Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa 
+                w przestrzeniach produkcyjnych, magazynowych i technicznych — od wstępnej koncepcji po gotowy system montażowy.
+                  </p>
+
+                    <p>
+                        Dzięki interaktywnemu podglądowi 3D możesz w czasie rzeczywistym zobaczyć każdy element systemu, 
+                            dopasować jego ilość oraz wysłać zapytanie bezpośrednio do naszego działu technicznego.
+                              </p>
+
+                                <div style="margin-top:14px; display:grid; gap:10px;">
+                                    <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">
+                                          <strong>✔ Kompleksowe projekty</strong><br>
+                                                Od koncepcji po wdrożenie — oferujemy pełną dokumentację 3D oraz wsparcie montażowe.
+                                                    </div>
+
+                                                        <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">
+                                                              <strong>✔ Kompatybilne systemy</strong><br>
+                                                                    Wszystkie elementy są modułowe i łączą się w spójny, bezpieczny układ barier.
+                                                                        </div>
+
+                                                                            <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">
+                                                                                  <strong>✔ Wizualizacja w przeglądarce</strong><br>
+                                                                                        Bez instalacji – modele 3D można obracać, powiększać oraz otworzyć w AR (rozszerzona rzeczywistość).
+                                                                                            </div>
+                                                                                              </div>
+
+                                                                                                <p style="margin-top:16px;">
+                                                                                                    Nasze produkty znajdują zastosowanie m.in. w <strong>halach przemysłowych</strong>, 
+                                                                                                        <strong>logistyce</strong>, <strong>infrastrukturze miejskiej</strong> oraz wszędzie tam, 
+                                                                                                            gdzie liczy się trwałość i bezpieczeństwo użytkowników.
+                                                                                                              </p>
+                                                                                                              </section>
+                                                                                                              
 
   <div class="viewer-wrap" style="margin-top:12px;">
 
