--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
   <header>
 
-    <h1>Provercel — Barierowe rozwiązania 3D</h1>
+    <h1>Provercel — Barierowe rozwiązania</h1>
 
     <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>
 
@@ -419,8 +419,8 @@
 
   <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;">
     <p>
-        <strong>Provercel</strong> to nowoczesne rozwiązania z zakresu <em>barier ochronnych i przemysłowych</em> 
-            projektowane w technologii 3D. Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa 
+        <strong>Provercel</strong> to nowoczesne rozwiązania z zakresu <em>barier ochronnych i przemysłowych.</em> 
+    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa 
                 w przestrzeniach produkcyjnych, magazynowych i technicznych — od wstępnej koncepcji po gotowy system montażowy.
                   </p>
 
@@ -432,7 +432,7 @@
                                 <div style="margin-top:14px; display:grid; gap:10px;">
                                     <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">
                                           <strong>✔ Kompleksowe projekty</strong><br>
-                                                Od koncepcji po wdrożenie — oferujemy pełną dokumentację 3D oraz wsparcie montażowe.
+                                                Od koncepcji po wdrożenie — oferujemy pełną dokumentację oraz wsparcie montażowe.
                                                     </div>
 
                                                         <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">
