--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania 3D</title>  <!-- Model Viewer -->  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{  
+<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania</title>  <!-- Model Viewer -->  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{  
 
   --bg:#0b0f14;  
 
@@ -419,7 +419,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                     Wszystkie elementy są modułowe i łączą się w spójny, bezpieczny układ barier.  
                                                                         </div>  
                                                                             <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;">  
-                                                                                  <strong>✔ Nasze produkty znajdują zastosowanie m.in. w halach przemysłowych</strong>,   
+                                                                                  <strong>✔ Nasze rozwiązania znajdują zastosowanie m.in. w halach przemysłowych</strong>
                                                                                                                                                                                           <strong>logistyce</strong>, <strong>infrastrukturze miejskiej</strong> oraz wszędzie tam,   
                                                                                                                                                                                                                                                                                                       gdzie liczy się trwałość i bezpieczeństwo użytkowników.  
                                                                           
