--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 </style></head><body>  <div class="card" role="main"><div>
 
   <header>  
-    <h1>Provercel — Barierowe rozwiązania</h1>  
-    <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>  
+    <h1>Provercel — Barierowe rozwiązania</h1> 
   </header>  
   <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;">  
     <p>  
@@ -457,7 +456,9 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 </div>  
 <aside class="controls">  
   <div class="panel">  
-    <label class="section-title">Wybierz elementy</label>  
+    <label class="section-title">
+      <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>
+      Wybierz elementy</label>  
     <div class="options" id="optionsList">  
       <!-- SŁUP -->  
       <label class="option">  
