--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 <aside class="controls">  
   <div class="panel">  
     <label class="section-title">
-      <p><strong>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</strong></p>
+      <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>
       Wybierz elementy:</label>  
     <div class="options" id="optionsList">  
       <!-- SŁUP -->  
