--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@ function updateSummary() {
  hiddenInput.value = selected.length ? selected.map(s => s.replace(/ × /g, 'x')).join('; ') : ''; 
 
 
- formSubject.value = totalQty ? `Zapytanie z Provercel - 3D (${totalQty} szt.)` : 'Zapytanie z Provercel - 3D'; 
+ formSubject.value = totalQty ? `Zapytanie z Provercel (${totalQty} szt.)` : 'Zapytanie z Provercel'; 
 
 
 } 
