--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <label class="small">Firma / Imię</label> 
      <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" /> 
      <label class="small">Adres e-mail</label> 
-     <input type="email" name="client_email" placeholder="twoj email" required /> 
+     <input type="email" name="client_email" placeholder="Twój email" required /> 
      <label class="small">Uwagi</label> 
      <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea> 
      <input type="hidden" name="selected_items" id="selected_items" value=""> 
