--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,15 @@ window.addEventListener('load', () => {
 </script>
                 
           
-
+<!-- Na końcu dokumentu, pod wszystkimi sekcjami -->
+<section id="regulamin" style="margin-top:40px; font-size:12px; line-height:1.5; color:#c8d3de; background:rgba(255,255,255,0.02); padding:14px; border-radius:10px;">
+  <h2>Regulamin i Polityka Prywatności</h2>
+    <p>Administratorem danych jest Provercel (email: provercel@proton.me).</p>
+      <p>Dane przesyłane w formularzu są przetwarzane wyłącznie w celu obsługi zapytań dotyczących produktów 3D. 
+           Wysłanie formularza oznacza wyrażenie zgody na przetwarzanie danych osobowych zgodnie z obowiązującymi przepisami RODO.</p>
+             <p>Użytkownik ma prawo dostępu do swoich danych, ich poprawiania oraz żądania usunięcia.</p>
+               <p>Strona nie prowadzi sprzedaży online – formularz służy wyłącznie do przesyłania zapytań.</p>
+               </section>-->
 
 </body></html>
 
