--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@ window.addEventListener('load', () => {
 
 </script>
                 
-          
+    <footer style="margin-top:auto; padding:12px; text-align:center; color:#9aa6b2;">        
 <!-- Na końcu dokumentu, pod wszystkimi sekcjami -->
 <section id="regulamin" style="margin-top:40px; font-size:12px; line-height:1.5; color:#c8d3de; background:rgba(255,255,255,0.02); padding:14px; border-radius:10px;">
   <h2>Regulamin i Polityka Prywatności</h2>
@@ -1177,6 +1177,6 @@ window.addEventListener('load', () => {
              <p>Użytkownik ma prawo dostępu do swoich danych, ich poprawiania oraz żądania usunięcia.</p>
                <p>Strona nie prowadzi sprzedaży online – formularz służy wyłącznie do przesyłania zapytań.</p>
                </section>-->
-
+              </footer>
 </body></html>
 
