--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@ header p{ margin:6px 0 0 0; color:var(--muted); font-size:13px; }
 
 
 } 
-
+footer {
+    flex-shrink: 0; /* footer zawsze na dole */
+    }
+    
+}
 
 model-viewer{ 
 
