--- a/index.html
+++ b/index.html
@@ -753,11 +753,11 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <button type="submit">Wyślij zapytanie</button> 
    </form> 
    <footer> 
-     <div class="small">Wiadomości na <strong>provercel@proton.me</strong>.
+     <div>
     
-    <h2>Regulamin i Polityka Prywatności</h2>
+    <h2><strong>Regulamin i Polityka Prywatności</strong></h2>
       <p>Administratorem danych jest Provercel (email: provercel@proton.me).</p>
-        <p>Dane przesyłane w formularzu są przetwarzane wyłącznie w celu obsługi zapytań dotyczących produktów 3D. 
+        <p>Dane przesyłane w formularzu są przetwarzane wyłącznie w celu obsługi zapytań dotyczących produktów. 
              Wysłanie formularza oznacza wyrażenie zgody na przetwarzanie danych osobowych zgodnie z obowiązującymi przepisami RODO.</p>
                <p>Użytkownik ma prawo dostępu do swoich danych, ich poprawiania oraz żądania usunięcia.</p>
                  <p>Strona nie prowadzi sprzedaży online – formularz służy wyłącznie do przesyłania zapytań.</p>
