--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
    <footer> 
      <div>
     
-    <h2><strong>Regulamin i Polityka Prywatności</strong></h2>
+    <strong>Regulamin i Polityka Prywatności</strong>
       <p>Administratorem danych jest Provercel.</p>
         <p>Dane przesyłane w formularzu są przetwarzane wyłącznie w celu obsługi zapytań dotyczących produktów. 
              Wysłanie formularza oznacza wyrażenie zgody na przetwarzanie danych osobowych zgodnie z obowiązującymi przepisami RODO.</p>
