--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
    <p> 
-       <strong>Provercel</strong> to nowoczesne rozwiązania z zakresu <em>barier ochronnych i przemysłowych.</em>  
+       <strong>Provercel</strong> to sprawdzone rozwiązania z zakresu <em>barier ochronnych i przemysłowych.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych — od wstępnej koncepcji po gotowy system montażowy. 
                  </p> 
