--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
    <p> 
        <strong>Provercel</strong> to sprawdzone rozwiązania z zakresu <em>barier ochronnych i przemysłowych.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
-               w przestrzeniach produkcyjnych, magazynowych i technicznych — od wstępnej koncepcji po gotowy system montażowy. 
+               w przestrzeniach produkcyjnych, magazynowych i technicznych. 
                  </p> 
                
                                <div style="margin-top:14px; display:grid; gap:10px;"> 
