--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania</title>  <!-- Model Viewer -->  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{ 
+<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>  <!-- Model Viewer -->  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{ 
 
 
  --bg:#0b0f14; 
@@ -600,11 +600,11 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
-   <h1>Provercel — Barierowe rozwiązania</h1>
+   <h1>Provercel — Barierowe rozwiązanie dla przemysłu</h1>
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
    <p> 
-       <strong>Provercel</strong> to sprawdzone rozwiązania z zakresu <em>barier ochronnych i przemysłowych.</em>  
+       <strong>Provercel</strong> to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych. 
                  </p> 
