--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                
                                <div style="margin-top:14px; display:grid; gap:10px;"> 
                                    <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
-                                         <strong>✔ Kompleksowe projekty</strong><br> 
-                                               Od koncepcji po wdrożenie — oferujemy pełną dokumentację oraz wsparcie montażowe. 
+                                         <strong>✔ Sprawdzeni produceni i atestowane materiały</strong><br> 
+                                               Komponenty posiadają atesty na ocynk oraz materiał. 
                                                    </div> 
                                                        <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
                                                              <strong>✔ Kompatybilne systemy</strong><br> 
