--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body{
  font-family:Inter, Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial; 
 
 
- background:url("https://images.unsplash.com/photo-1527443224154-d4cd1f79f2c1?auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
+ background:linear-gradient(180deg, var(--bg), #071019); 
    background-size: cover;
      color: #e6eef6;
 
