--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000"  
               data-model="https://github.com/Provercel/Provercel/blob/main/prowadnica.obj"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Słup stalowy H=1000</strong></div> 
+         <div><strong>prowadnica L=1000</strong></div> 
          <div class="meta">SKU: SLP-1000 • Ø 60 mm</div> 
        </div> 
        <div class="qty-wrap"> 
