--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <!-- SŁUP --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000"  
-              data-model="https://github.com/Provercel/Provercel/blob/main/prowadnica.obj"> 
+              data-model="https://sketchfab.com/3d-models/8-hole-flange-c0dcee2469cd49efa23b742b5a2ee606"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>prowadnica L=1000</strong></div> 
+         <div><strong>Prowadnica L=1000</strong></div> 
          <div class="meta">SKU: SLP-1000 • Ø 60 mm</div> 
        </div> 
        <div class="qty-wrap"> 
