--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <!-- SŁUP --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000"  
-              data-model="https://sketchfab.com/3d-models/8-hole-flange-c0dcee2469cd49efa23b742b5a2ee606"> 
+              data-model="https://github.com/KhronosGroup/glTF-Sample-Models/blob/master/2.0/BoxTextured/glTF-Binary/BoxTextured.glb"> 
        <div style="flex:1; min-width:180px"> 
          <div><strong>Prowadnica L=1000</strong></div> 
          <div class="meta">SKU: SLP-1000 • Ø 60 mm</div> 
