--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      exposure="1.2" 
      shadow-intensity="1" 
      environment-image="neutral" 
-     camera-orbit="0deg 75deg 2.5m" 
+     camera-orbit="90deg 75deg 2.5m" 
      loading="eager"> 
      <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;"> 
        Zobacz w AR 
@@ -663,7 +663,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>
      Wybierz elementy:</label> 
    <div class="options" id="optionsList"> 
-     <!-- SŁUP --> 
+     <!-- Prowadnica --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Prowadnica H=1000" data-sku="SLP-1000"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/prowadnica.glb"> 
