--- a/index.html
+++ b/index.html
@@ -665,10 +665,10 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
    <div class="options" id="optionsList"> 
      <!-- Prowadnica --> 
      <label class="option"> 
-       <input type="checkbox" class="item-check" data-name="Prowadnica H=1000" data-sku="SLP-1000"
+       <input type="checkbox" class="item-check" data-name="Prowadnica L=4300" data-sku="SLP-4300"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/prowadnica.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Prowadnica L=1000</strong></div> 
+         <div><strong>Prowadnica L=4300</strong></div> 
          <div class="meta">SKU: SLP-1000 • Ø 60 mm</div> 
        </div> 
        <div class="qty-wrap"> 
