--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Prowadnica L=4300" data-sku="SLP-4300"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/prowadnica.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Prowadnica B L=4300 S355MC GR. 2,5 mm • Ocynk</strong></div> 
+         <div><strong>Prowadnica B L=4300 • 2,5 mm • Ocynk</strong></div> 
          <div class="meta">SKU: SLP-4300 • Ocynk </div> 
        </div> 
        <div class="qty-wrap"> 
