--- a/index.html
+++ b/index.html
@@ -602,7 +602,9 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
-   <h1>Provercel — Barierowe rozwiązanie dla przemysłu</h1>
+   <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu
+    Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
+   </h1>
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
    <p> 
