--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
-   <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu
+   <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu.
     Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
    </h1>
  </header> 
