--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
    <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu.
     Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
    </h1>
+   <button><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
    <p> 
