--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
     Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
    </h1>
    <p>
-   <button><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
+   <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
    </p>
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
