--- a/index.html
+++ b/index.html
@@ -606,8 +606,10 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
     Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
    </h1>
    <p>
+    <a href="#requestForm">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
-   </p>
+    </a>
+  </p>
  </header> 
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
    <p> 
