--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
     Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
    </h1>
    <p>
-    <a href="#requestForm">
+    <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
     </a>
   </p>
