--- a/index.html
+++ b/index.html
@@ -774,13 +774,14 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
     </div> 
    </footer> 
  </div>
-   <p> 
+   <p>
+    <div>
        <strong>Provercel</strong> to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami dostarczając szeroki zakres modułowych elementów do samodzielnego montażu.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych. 
                  </p> 
 
-
+                </div>
 
 
  
