--- a/index.html
+++ b/index.html
@@ -775,7 +775,11 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
    </footer> 
  </div>
    <p>
+   <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
+
+
     <div>
+  
        <strong>Provercel</strong> to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami dostarczając szeroki zakres modułowych elementów do samodzielnego montażu.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych. 
@@ -783,7 +787,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
                 </div>
 
-
+              </section>
  
 </aside> 
  </div>  <script>  const mv = document.getElementById('mv'); 
