--- a/index.html
+++ b/index.html
@@ -776,7 +776,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
     <div>
   
-       <strong>O nas</strong>Provercel to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami dostarczając szeroki zakres modułowych elementów do samodzielnego montażu.</em>  
+       <p><strong>O nas</strong></p>
+       Provercel to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami dostarczając szeroki zakres modułowych elementów do samodzielnego montażu.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych. 
                  </p> 
