--- a/index.html
+++ b/index.html
@@ -775,13 +775,15 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
     <div>
-  
+                                     <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
+
+
        <p><strong>O nas</strong></p>
        Provercel to niezawodny partner w zakresie barier ochronnych i przemysłowych. <em>Współpracujemy z wieloma producentami dostarczając szeroki zakres modułowych elementów do samodzielnego montażu.</em>  
    Naszym celem jest zapewnienie najwyższego poziomu bezpieczeństwa  
                w przestrzeniach produkcyjnych, magazynowych i technicznych. 
                  </p> 
-
+                </div>
                 </div>
 
               </section>
