--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body{
  max-width:1100px; 
 
 
- background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); 
+ background:linear-gradient(180deg, rgba(255,255,250,0.02), rgba(255,255,255,0.01)); 
 
 
  border-radius:14px; 
@@ -603,7 +603,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
  <header> 
    <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu.
-    Modułowe elementy do hal, magazynów i przestrzeni przemysłowych.
+    Modułowe elementy barier do hal, magazynów i przestrzeni przemysłowych.
    </h1>
    <p>
     <a href="#summary">
