--- a/index.html
+++ b/index.html
@@ -602,8 +602,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
-   <h1>Provercel — Systemy barier ochronnych do samodzielnego montażu.
-    Modułowe elementy barier do hal, magazynów i przestrzeni przemysłowych.
+   <h1>Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w obrębie hal, magazynów i przestrzeni przemysłowych
    </h1>
    <p>
     <a href="#summary">
