--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
-   <h1>Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeni przemysłowej
+   <h1>Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeniach przemysłowych
    </h1>
    <p>
     <a href="#summary">
