--- a/index.html
+++ b/index.html
@@ -602,6 +602,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
  <header> 
+  <img src="logo.png" alt="Logo firmy" width="150">
+  
    <h1>Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeniach przemysłowych
    </h1>
    <p>
