--- a/index.html
+++ b/index.html
@@ -601,10 +601,10 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 </style></head><body>  <div class="card" role="main"><div>
 
 
- <header> 
+ <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
-   <h1>Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeniach przemysłowych
+   Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeniach przemysłowych
    </h1>
    <p>
     <a href="#summary">
