--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
-   Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w halach, magazynach i przestrzeniach przemysłowych
+   Provercel — Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
    </h1>
    <p>
     <a href="#summary">
