--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                        </div> 
                                                                            <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
                                                                                  <strong>✔ Nasze rozwiązania znajdują zastosowanie m.in. w halach przemysłowych</strong>
-                                                                                                                                                                                         <strong>logistyce</strong>, <strong>infrastrukturze miejskiej</strong> oraz wszędzie tam,  
+                                                                                                                                                                                         <strong>logistyce</strong> oraz wszędzie tam,  
                                                                                                                                                                                                                                                                                                      gdzie liczy się trwałość i bezpieczeństwo użytkowników. 
                                                                         
                                                                                            </div> 
