--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
-   Provercel <p><strong>Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych</strong>
-   </p></h1>
+   Provercel <strong>Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych</strong>
+   </h1>
    <p>
     <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
