--- a/index.html
+++ b/index.html
@@ -604,8 +604,10 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
-   <strong>Provercel </strong></h1> Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
-   
+   <strong>Provercel </strong></h1>
+                                  <div style="margin-top:14px; display:grid; gap:10px;"> 
+   Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
+                                  </div>
    <p>
     <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
