--- a/index.html
+++ b/index.html
@@ -605,12 +605,15 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
   <img src="logo.png" alt="Logo firmy" width="150">
   
    <strong>Provercel </strong></h1>
+                                  <div style="margin-top:14px; display:grid; gap:10px;"> 
+
+
                                                      <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
 
 
    Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
                                   </div>
-   <p>
+   </div>
     <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
     </a>
