--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
-   <strong>Provercel </strong>
+   <strong>Provercel </strong></h1>
                                   
 
 
@@ -612,7 +612,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
    Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
-                                                     </h1>      </div>
+                                                           </div>
    
     <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
