--- a/index.html
+++ b/index.html
@@ -610,9 +610,12 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
                                                      <div style="background:rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.04); border-radius:10px; padding:10px;"> 
 
+ <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
+
 
    Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
-                                                           </div>
+                                                           </div> 
+                                                           </section>
    
     <a href="#summary">
    <button type="button"><strong>Skonfiguruj zestaw / Złóż zapytanie</strong></button>
