--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
  <section style="margin-top:16px; line-height:1.6; font-size:14px; color:#c8d3de;"> 
 
 
-  <p> Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
-                                                          </p> </div> 
+  Modułowe elementy barier ochronnych do samodzielnego montażu w magazynach i przestrzeniach przemysłowych
+                                                           </div> 
                                                            </section>
    
     <a href="#summary">
