--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
-<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>  <!-- Model Viewer -->  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{ 
+<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>  <!-- Model Viewer -->
+
+<meta name="description" content="Modułowe bariery ochronne dla przemysłu i magazynów. Skonfiguruj zestaw, zobacz podgląd 3D i złóż zapytanie ofertowe." />
+<meta name="keywords" content="bariery ochronne, modułowe bariery, przemysł, magazyny, bezpieczeństwo, Provercel, 3D konfigurator" />
+<meta name="author" content="Provercel" />
+<meta name="robots" content="index, follow" />
+<meta name="theme-color" content="#0b0f14" />
+<!-- Open Graph -->
+<meta property="og:title" content="Provercel — Modułowe bariery ochronne dla przemysłu" />
+<meta property="og:description" content="Interaktywny konfigurator barier ochronnych z podglądem 3D. Wybierz elementy, dostosuj ilość i złóż zapytanie." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://provercel.vercel.app/" />
+<meta property="og:image" content="https://provercel.vercel.app/og-image.jpg" />
+<meta property="og:image:alt" content="Podgląd 3D bariery ochronnej Provercel" />
+<meta property="og:site_name" content="Provercel" />
+<meta property="og:locale" content="pl_PL" />
+<!-- Twitter (X) Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Provercel — Modułowe bariery ochronne" />
+<meta name="twitter:description" content="Skonfiguruj bariery ochronne w 3D i złóż zapytanie ofertowe. Bezpieczeństwo w przemyśle i magazynach." />
+<meta name="twitter:image" content="https://provercel.vercel.app/og-image.jpg" />
+<meta name="twitter:image:alt" content="Interaktywny model 3D bariery ochronnej" />
+<!-- Bezpieczeństwo -->
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; connect-src 'self' https://formsubmit.co; img-src 'self' data: https://provercel.vercel.app; object-src 'none'; frame-src 'none';" />
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{ 
 
 
  --bg:#0b0f14; 
